# Emscripten_Multi-Memory_Example

./: .gitignore  CMakeLists.txt  README.md  external.wat  index.html  main.c  memory.wat  post.js  pre.js
web/: pre.js
